	* app/lineprops_area.c:
	* app/menus.c:	
	* app/preferences.c:
	* app/render_eps.c:	
	* app/sheets.c:
	* app/sheets_dialog_callbacks.c:
	* plug-ins/xslt/xslt.c:
	* plug-ins/metapost/render_metapost.c:
	* plug-ins/xfig/xfig-export.c:
	* plug-ins/shape/shape-export.c:
	
	Killed most gcc-3.2 warnings (const-correctness and derived warnings, 
	unused variables, mostly)

	* app/display.c:
	* app/menus.c: enabled GTK Input Methods.
	
2002-09-19  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/UML/uml.c (uml_get_operation_string): Patch from Mauf
	<mfranzoni@madd.it>:  Check for the type being NULL.

2002-09-16  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_eps.c (set_font): Re-tweaked font size for printing.

2002-09-12  Cyrille Chepelov  <cyrille@chepelov.org>

	Patch from Angus Ainslie <angusa@deltatee.com>:
	* plug-ins/dxf/dxf-import.c:
	* plug-ins/dxf/autocad_pal.h: Import from visio 2002 improvements.

	(plus a couple extra fixes by me, such as the removal of printf's,
	adapting for recent changes, and killed a couple warnings) 

	* app/authors.h: a 60K patch isn't insignificant, is it?
	
2002-09-09  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Check for both pangoft2 (using PKG_CHECK_MODULES,
	as before) and -lfreetype (using AC_CHECK_LIB). At least on
	Solaris with Sun's compiler (Forte C), you need to link also the
	dia application with -lfreetype, even if it is implicitly linked
	to by -lpangoft2. Rename FREETYPE_CFLAGS and _LIBS to PANGOFT2_*,
	which is what they actually mean. Use FREETYPE_LIBS for
	-lfreetype.

	Don't look for libsunmath if isinf() is not found in math.h (as on
	Solaris). The sunmath library is part of Forte C and not present
	on all machines. Besides, even if isinf was found in libsunmath,
	we didn't use it in the Makefile.am.
	
	Fix a couple of bashisms.

	AC_SUBST also Z_LIBS, need to link the dia application to -lz,
	too, on Solaris with Forte C.

	Don't try to use the gcc flags with other compilers.