@@ -37,7 +37,10 @@
 	unused variables, mostly)
 
 	* app/display.c:
-	* app/menus.c: enabled GTK Input Methods.
+	* app/menus.c: enabled GTK Input Methods (thanks Lars!)
+
+	* app/Makefile.am: modified run_dia.sh so that we recover the
+	ability to run a debugger despite libtool's hacks.
 	
 2002-09-19  Lars Clausen  <lrclause@cs.uiuc.edu>
 
